# jerkmon

./: .gitignore  Cargo.toml  LICENSE.md  README.md  flake.nix  go.mod
.claude/: settings.local.json
analyze/: .gitignore  analyze.go  go.mod
linux/: Cargo.toml  README.md
linux/src/: evdev.rs  main.rs  utils.rs  wayland.rs  websocket.rs
src/: main.rs
win/: .gitignore  Cargo.toml
win/src/: main.rs
