[package]
name = "jerkmon"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_Devices_DeviceAndDriverInstallation",
] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros"] }
tokio-tungstenite = "0.27"
futures-util = "0.3"
