[package]
name = "jerkmon"
version = "0.2.0"
edition = "2024"

[dependencies]
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
crossbeam-channel = "0.5"
